# PiBakeSoftware

./: .gitignore  .travis.yml  CONTRIBUTING.MD  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: gen_diagrams.sh  gen_docs.sh
pibakesoftware/: __init__.py  __main__.py  connect.py  error.py  pyproject.toml  read.py  temperature.py  util.py  uuid_gen.py  write.py
pibakesoftware/test/: test.py
uuid/: .travis.yml  Cargo.toml  uuid
uuid/src/: main.rs
