[tool.poetry]
name = "pibakesoftware"
version = "0.8.0"
description = "Backend software for grabing temperature data"
authors = ["Wyatt J. Miller <wjmiller2016@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
